--- a/sprint4/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint4/Kode/Foundation/Voksen/kompetanse.html
@@ -63,14 +63,14 @@
                     <dl class="sub-nav">
                       <dt>Filter:</dt>
                       <dd><a id="engelskBtn" href="#engelskAco">Engelsk</a></dd>
-                      <dd><a href="#norskAco">Norsk</a></dd>
-                      <dd><a href="#naturAco">Naturfag</a></dd>
-                      <dd><a href="#kohAco">Kunst og Håndverk</a></dd>
-                      <dd><a href="#mohAco">Mat og Helse</a></dd>
-                      <dd><a href="#rleAco">RLE</a></dd>
-                      <dd><a href="#musikkAco">Musikk</a></dd>
-                      <dd><a href="#matteAco">Mattematikk</a></dd>
-                      <dd><a href="#samfunnAco">Samfunnsfag</a></dd>
+                      <dd><a id="norskBtn" href="#norskAco">Norsk</a></dd>
+                      <dd><a id="naturBtn" href="#naturAco">Naturfag</a></dd>
+                      <dd><a id="kohBtn" href="#kohAco">Kunst og Håndverk</a></dd>
+                      <dd><a id="mohBtn" href="#mohAco">Mat og Helse</a></dd>
+                      <dd><a id="rleBtn" href="#rleAco">RLE</a></dd>
+                      <dd><a id="musikkBtn" href="#musikkAco">Musikk</a></dd>
+                      <dd><a id="matteBtn" href="#matteAco">Mattematikk</a></dd>
+                      <dd><a id="samfunnBtn" href="#samfunnAco">Samfunnsfag</a></dd>
                     </dl>
                     
                     <div id="innholdWrapper">
@@ -78,7 +78,7 @@
                     <dl id="engelskAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel1b">Engelsk / Etter 2.årstrinn</a>
-                        <div id="panel1b" class="content active">
+                        <div id="panel1b" class="content">
                             <ul>
                                 <li><h3>Språklæring</h3></li>
                                 <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
@@ -197,8 +197,34 @@
                     <dl id="norskAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel4b">Norsk / Etter 2.årstrinn</a>
-                        <div id="panel4b" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <div id="panel4b" class="content">
+                          <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -221,8 +247,34 @@
                     <dl id="naturAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel7b">Naturfag / Etter 2.årstrinn</a>
-                        <div id="panel7b" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <div id="panel7b" class="content">
+                          <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -244,8 +296,34 @@
                     <dl id="kohAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel1c">Kunst og Håndverk / Etter 2.årstrinn</a>
-                        <div id="panel1c" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <div id="panel1c" class="content">
+                          <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -266,7 +344,7 @@
                     <dl id="mohAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel4c">Mat og helse / Etter 2.årstrinn</a>
-                        <div id="panel4c" class="content active">
+                        <div id="panel4c" class="content">
                           Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </div>
                       </dd>
@@ -289,8 +367,34 @@
                     <dl id="rleAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel7c">RLE / Etter 2.årstrinn</a>
-                        <div id="panel7c" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <div id="panel7c" class="content">
+                          <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -311,7 +415,7 @@
                     <dl id="musikkAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel1d">Musikk / Etter 2.årstrinn</a>
-                        <div id="panel1d" class="content active">
+                        <div id="panel1d" class="content">
                           Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </div>
                       </dd>
@@ -334,8 +438,34 @@
                     <dl id="matteAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                        <a href="#panel4d">Mattematikk / Etter 2.årstrinn</a>
-                        <div id="panel4d" class="content active">
-                          Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <div id="panel4d" class="content">
+                          <ul>
+                                <li><h3>Språklæring</h3></li>
+                                <li>Gi eksempler på noen situasjoner der det kan være nyttig å kunne engelsk</li>
+                                <li>Finne ord og uttrykk som er felles for engelsk og eget morsmål</li>
+                                <li>bruke digitale ressurser i opplevelse av språket</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Muntlig kommunikasjon</h3></li>
+                                <li>lytte etter og bruke engelske språklyder gjennom praktisk-estetiske uttrykksmåter</li>
+                                <li>lytte til og forstå enkle instruksjoner på engelsk</li>
+                                <li>lytte til og forstå ord og uttrykk i engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                                <li>forstå og bruke noen engelske ord, uttrykk og setningsmønstre knyttet til nære omgivelser og egne interesser</li>
+                                <li>ghilse, stille og svare på enkle spørsmål og bruke noen høflighetsuttrykk</li>
+                                <li>delta i enkle innøvde dialoger og spontane samtaler knyttet til nære omgivelser og egne opplevelser</li>
+                                <li>bruke tall i samtale om nære omgivelser og egne opplevelser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Skriftlig kommunikasjon</h3></li>
+                                <li>kjenne igjen sammenhengen mellom noen engelske språklyder og stavemønstre</li>
+                                <li>eksperimentere med å lese og skrive engelske ord, uttrykk og enkle setninger knyttet til nære omgivelser og egne interesser</li>
+                            </ul>
+                            <ul>
+                                <li><h3>Kultur, samfunn og litteratur</h3></li>
+                                <li>samtale om sider ved barns dagligliv i engelskspråklige land</li>
+                                <li>ta del i og oppleve barnekultur fra engelskspråklige land gjennom å bruke ord, bilder, musikk og bevegelse</li>
+                                <li>gi uttrykk for egne opplevelser av engelskspråklige rim, regler, sanger, eventyr og fortellinger</li>
+                            </ul>
                         </div>
                       </dd>
                       <dd class="accordion-navigation">
@@ -356,7 +486,7 @@
                     <dl id="samfunnAco" class="accordion" data-accordion>
                       <dd class="accordion-navigation">
                         <a href="#panel7d">Samfunnsfag / Etter 2.årstrinn</a>
-                        <div id="panel7d" class="content active">
+                        <div id="panel7d" class="content">
                           Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </div>
                       </dd>
