--- a/sprint4/Kode/Foundation/Voksen/omSkolevein.html
+++ b/sprint4/Kode/Foundation/Voksen/omSkolevein.html
@@ -39,9 +39,19 @@
     </div>
     <div id="wrapper">
         <!--SLIDER-->
-        <div class="row">
+            <div class="row">
             <div class="large-12 columns">
-                <aside id="promoBanner"></aside>
+                <aside id="promoBanner">
+                    <div id="promobannerTextBox">
+                    <h3>HISTORIEN OM EUROPA</h3>
+                    <p>NYHET: Helt ferske temasider om 
+                    romertiden, middelalderen, 
+                    renessansen og opplysningstiden 
+                    er nå tilgjengelig under
+                    «Historien om Europa» for 5.-7. trinn.</p>
+                    </div>
+                    <img src="img/nyheter/historienOmEuropa.png">
+                </aside>
             </div>
         </div>
         <div class="row">
@@ -60,9 +70,9 @@
             <div id="articleOmrade">
                 <div class="large-2 small-12 columns">
                     <ul class="side-nav">
-                        <li><a class="active" href="omSalaby">Om Salaby</a>
+                        <li><a href="omSalaby">Om Salaby</a>
                         </li>
-                        <li><a href="omSkoleveien">Om Skoleveien 1-2 Trinn</a>
+                        <li><a class="active" href="omSkolevein">Om Skoleveien 1-2 Trinn</a>
                         </li>
                         <li><a href="omByparken">Om Byparken 3-5 Trinn</a>
                         </li>
