--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -7,12 +7,19 @@
     <title>Forside Barn</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <style>
+    body {
+        background: url("img/rlebakgrunn.jpg") no-repeat;
+        background-attachment: fixed;
+        background-position: center bottom;
+        background-size: cover;
+    }
+    </style>
     <script src="js/vendor/modernizr.js"></script>
 </head>
 
 <body>
-<!--MENU-->
+    <!--MENU-->
     <div class="fixed">
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
@@ -37,7 +44,7 @@
             </section>
         </nav>
     </div>
-   <div class="row" id="mainMenu">
+    <div class="row" id="mainMenu">
         <div class="large-12 columns">
             <div class="row">
                 <div class="large-3 medium-6 small-6 columns">
@@ -47,60 +54,62 @@
                 </div>
                 <div class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <a href="./barnforside.html"><img src="./img/arrowback.png"></a>
+                        <a href="./barnforside.html"><img src="./img/arrowback.png">
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-                <div class="row">
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/jøde.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/islam.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/kristendom.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <a href="hinduisme.html"><img src="img/RLE/hinduisme.png"></a>
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/budd.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/sikhisme.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/etikk.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/kirke.png">
-                        </div>
-                    </div>
-                    <div class="large-4 small-6 columns">
-                        <div id="align_center" class="align-center">
-                            <img src="img/RLE/kunst2.png">
-                        </div>
-                    </div>
-                </div>
-        <!-- FOOTER -->
+    <div class="row">
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/jøde.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/islam.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/kristendom.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <a href="hinduisme.html"><img src="img/RLE/hinduisme.png">
+                </a>
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/budd.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/sikhisme.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/etikk.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/kirke.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/kunst2.png">
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
     <!-- salaby logo -->
     <div id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
@@ -129,12 +138,12 @@
     </div>
     <!-- FOOTER SLUTT -->
 
-        <script src="js/vendor/jquery.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/menuHeadScript.js"></script>
-        <script>
-            $(document).foundation();
-        </script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/menuHeadScript.js"></script>
+    <script>
+    $(document).foundation();
+    </script>
 </body>
 
 </html>
