--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -266,7 +266,7 @@
             </ul>
         </div>
         <!-- sosiale medier -->
-        <div id="socialLinks" class="large-2 small-12 columns">
+        <div id="socialLinks" class="large-2 columns">
             <a href="https://www.facebook.com/salaby">
                 <img src="img/social/facebook_logo.png">
             </a>
