--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -61,6 +61,7 @@
             </div>
         </div>
     </div>
+    <div id="test">
     <div class="row">
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
@@ -108,6 +109,7 @@
                 <img src="img/RLE/kunst2.png">
             </div>
         </div>
+    </div>
     </div>
     <!-- FOOTER -->
     <!-- salaby logo -->
