--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -137,12 +137,14 @@
                 <img src="img/social/youtube_logo.png">
             </a>
         </div>
+        <a href="#0" class="cd-top">Top</a>
     </div>
     <!-- FOOTER SLUTT -->
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="js/menuHeadScript.js"></script>
+    <script src="js/main.js"></script>
     <script>
     $(document).foundation();
     </script>
