--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -14,23 +14,28 @@
 
     <!--ADULT SECTION-->
     <div id="adultSection">
+        <div class="row">
+            <div class="small-12 columns">
         <div class="overlay">
             <a href="Voksen/voksenForside">Til voksensiden</a>
         </div>
+        </div>
+        <div class="small-12 columns">    
         <a href="Voksen/voksenForside">
-            <img src="img/adultSection.jpg">
-        </a>
+            <img src="img/adultSection.jpg"></a>
+        </div>
+    </div>
     </div>
 
     <!--CHILD SECTION-->
     <div id="childSection">
         <div class="row">
-            <div class="large-6 columns">
+            <div class="large-6 small-12 columns">
                 <h2>Velkommen til Salaby</h2>
             </div>
         </div>
         <div id="row">
-            <div class="large-6 columns">
+            <div class="large-12 medium-12 small-12 columns">
                 <label>Innlogging
                     <input id="userField" type="text" placeholder="Brukernavn" />
                     <input id="passField" type="password" placeholder="Passord" />
@@ -42,7 +47,7 @@
     </div>
     <div id="personPos">
         <div class="row">
-            <div class="large-12 columns">
+            <div class="large-12 small-12 columns">
                 <img src="img/Emre_1.png">
             </div>
         </div>
