--- a/sprint4/Kode/Foundation/Voksen/voksenForside.html
+++ b/sprint4/Kode/Foundation/Voksen/voksenForside.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/styleVoksen.css" />
     <link rel="stylesheet" href="../css/headerStyle.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css//footer.css" />
     
 
     <script src="js/vendor/modernizr.js"></script>
