--- a/sprint4/Kode/Foundation/index.html
+++ b/sprint4/Kode/Foundation/index.html
@@ -39,8 +39,8 @@
                 <label>Innlogging
                     <input id="userField" type="text" placeholder="Brukernavn" />
                     <input id="passField" type="password" placeholder="Passord" />
-                    <input id="loginBtn" type="button" class="button expand" value="Logg inn">
-                    <a href="Barn/barnForside">Alternativ link til barneforside.</a>
+                    <input id="loginBtn" type="button" class="button expand" value="Logg inn"><div class="small-12 columns">
+                    <a class="synlig" href="Barn/barnForside">Alternativ link til barneforside.</a></div>
                 </label>
             </div>
         </div>
