--- a/sprint4/Kode/Foundation/Barn/barnForside.html
+++ b/sprint4/Kode/Foundation/Barn/barnForside.html
@@ -269,7 +269,7 @@
         <!-- sosiale medier -->
         <div id="socialLinks" class="large-2 columns">
             <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png">
+                <img src="img/social/facebook_logo.png" />
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
                 <img src="img/social/youtube_logo.png">
