--- a/sprint4/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint4/Kode/Foundation/Barn/RLE_side.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <a href="./barnforside.html"><img src="./img/arrowback.png">
+                        <a href="./barnforside.html"><img src="./img/arrowback.png" width="40px">
                         </a>
                     </div>
                 </div>
