--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -60,40 +60,51 @@
             </div>
         </div>
 
+
+
         <div class="row">
-            <div class="large-4 small-6 columns">
+            <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/shiva.png">
                 </div>
             </div>
-            <div class="large-4 small-6 columns">
+            <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/ganesha.png">
                 </div>
             </div>
-            <div class="large-4 small-6 columns">
+            <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/murugan.png">
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="large-4 small-6 columns">
+            <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/durga.png">
                 </div>
             </div>
-            <div class="large-4 small-6 columns">
+        </div>
+
+        <div class="row">
+            <div class="large-3 small-6 columns">
+                <div class="align-center" id="align_center">
+                    <img src="./img/hinduisme/durga.png">
+                </div>
+            </div>
+            <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/film.png">
                 </div>
             </div>
-            <div class="large-4 small-6 columns">
+
+             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
                     <img src="./img/hinduisme/tegn.png">
                 </div>
             </div>
+
         </div>
+
         </div>
     </section>
     <!-- Footer -->
