--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="large-3 medium-6 small-6 columns">
                         <div class="menu-option">
-                            <a href="./RLE_SIDE.html"><img src="./img/arrowback.png">
+                            <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png">
                             </a>
                         </div>
                     </div>
