--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -60,6 +60,12 @@
             </div>
         </div>
 
+        <div class="row">
+
+                <h1 class="fagh">HINDUISME</h1>
+
+
+        </div>
 
 
         <div class="row">
@@ -102,6 +108,7 @@
                     <img src="./img/hinduisme/tegn.png">
                 </div>
             </div>
+            <div class="large-3"></div>
 
         </div>
 
