flyttet noen bilder, la til noen nye fag på barn-forside.

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -142,6 +142,125 @@
     </div>
     <!--!!!!!!!!!!!!!!!!SKOLEVEIEN MENY SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
+    <!--!!!!!!!!!!!!!!!!SKOLESTART FAG!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row skolestart">
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!--!!!!!!!!!!!!!!!!SKOLESTART FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+
+    <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row skolestart">
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+
+    <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row skolestart">
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
+
+    <!--!!!!!!!!!!!!!!!!MORSMÅL FAG!!!!!!!!!!!!!!!!!!!!-->
+    <div class="row skolestart">
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/biblioteket.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/billehagen.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/musikkfilm.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/TilDeVoksene.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/barnehage/trampoline.png">
+            </div>
+        </div>
+    </div>
+    <!--!!!!!!!!!!!!!!!!MORSMÅL SLUTT FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!!!!!KANALS FAG!!!!!!!!!!!!!!!!!!!-->
     <!-- mobil meny -->
