--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -173,7 +173,7 @@
     <!--!!!!!!!!!!!!!!!!SKOLESTART FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-    <div class="row skolestart">
+    <div class="row 1-2Klasse">
         <div class="large-4 small-6 columns">
             <div class="align-center">
                 <img src="img/barnehage/biblioteket.png">
@@ -203,7 +203,7 @@
     <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-    <div class="row skolestart">
+    <div class="row 3-4Klasse">
         <div class="large-4 small-6 columns">
             <div class="align-center">
                 <img src="img/barnehage/biblioteket.png">
@@ -233,7 +233,7 @@
     <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!MORSMÅL FAG!!!!!!!!!!!!!!!!!!!!-->
-    <div class="row skolestart">
+    <div class="row morsmaal">
         <div class="large-4 small-6 columns">
             <div class="align-center">
                 <img src="img/barnehage/biblioteket.png">
