--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -58,10 +58,9 @@
             </div>
         </div>
         <div class="row">
-
-            <h1 class="fagh">HINDUISME</h1>
-
-
+            <div class="large-12">
+                <h1 class="fagh">HINDUISME</h1>
+            </div>
         </div>
 
 
